    - remove bzr dependency here
  * debian/update-wordlists.sh, petname.go:
    - Use a new comment to denote end of word lists
  * petname.go:
    - updated wordlists to match upstream
  * debian/control, debian/copyright:
    - updated to relocate source from Launchpad to github
  * go.mod:
    - added go mod file for apk
    - set go version to 1.20 per issue #18

  [ Edward Betts ]
  * petname.go:
    - fix typo

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 02 Oct 2023 11:13:42 -0500

golang-petname (2.10-0ubuntu1) eoan; urgency=medium

  * README.md:
    - update to the newer python-petname readme
    - refer to https://tools.ietf.org/html/rfc1178
    - update golang and python examples

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 13 Jun 2019 15:04:54 -0500

golang-petname (2.9-0ubuntu1) unstable; urgency=medium

  [ Michael Hudson-Doyle ]
  * Stop building shared library package.
    - https://github.com/dustinkirkland/golang-petname/pull/6

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 21 Sep 2017 17:06:36 -0500

golang-petname (2.8-0ubuntu1) artful; urgency=medium

  * petname.go, README.md:
    - update wordlists, from petname upstream changes

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 21 Sep 2017 17:06:33 -0500

golang-petname (2.7-0ubuntu1) artful; urgency=medium

  [ Brian Fallik ]
  * README.md:
    - https://github.com/dustinkirkland/golang-petname/pull/3
    - update README.md to be Markdown compliant #3
  * cmd/petname/main.go, petname.go:
    - move random seeding to the main function
    - callers of our library will need to ensure their PRNG
      is properly seeded

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 27 Apr 2017 18:08:47 -0500

golang-petname (2.6-0ubuntu1) zesty; urgency=medium

  [ Michael Hudson-Doyle ]
  * Fix repeated use of shlibs:Depends substvar that lead to broken Depends.
    - https://github.com/dustinkirkland/golang-petname/pull/2

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 05 Jan 2017 15:50:06 -0600